--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,10 +1,8 @@
 
 .player {
-  border: 2px solid #7b2cbf;
+  /* border: 2px solid; */
   object-fit: cover;
   padding: 0;
   margin: 0;
   pointer-events: none;
-
-  
 }
