--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -10,54 +10,58 @@
     display: flex;
     justify-content: space-between;
   }
-   
-  
+
+
   .top_container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 5px 20px;
   }
-  
+
   .mid__container {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
+
   .icon__btn {
     padding: 0 10px;
     color: #7b2cbf;
   }
-  
+
   .slider__container {
     /* width: 100%; */
     display: flex;
     align-items: center;
     padding: 0 16px;
   }
-  
+
   .control__box {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   .inner__controls {
     display: flex;
     padding: 10px 0;
     align-items: center;
     width: 50%;
   }
-  
+
  .span{
     color: #fff;
     font-size: 0.8rem;
     margin-left: 10px;
   }
-  
+
   .second__control {
     display: flex;
     align-items: center;
   }
-  
+
+.volumeSlider {
+    width: 100px;
+    color: #9556CC;
+}
