--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -6,7 +6,7 @@
     right: 0;
     left: 0;
     flex-direction: column;
-    z-index: 1;
+    /* z-index: 1; */
     display: flex;
     justify-content: space-between;
   }
