--- a/styles/Control.module.css
+++ b/styles/Control.module.css
@@ -1,67 +1,80 @@
 .control_Container {
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    flex-direction: column;
-    /* z-index: 1; */
-    display: flex;
-    justify-content: space-between;
-  }
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  flex-direction: column;
+  /* z-index: 1; */
+  display: flex;
+  justify-content: space-between;
+}
 
 
-  .top_container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 5px 20px;
-  }
+.top_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 5px 20px;
+}
 
-  .mid__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.mid__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .icon__btn {
-    padding: 0 10px;
-    color: #7b2cbf;
-  }
+.slider__container {
+  /* width: 100%; */
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
 
-  .slider__container {
-    /* width: 100%; */
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-  }
+.control__box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .control__box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.inner__controls {
+  display: flex;
+  padding: 10px 0;
+  align-items: center;
+  width: 50%;
+}
 
-  .inner__controls {
-    display: flex;
-    padding: 10px 0;
-    align-items: center;
-    width: 50%;
-  }
+.span {
+  color: #fff;
+  font-size: 0.8rem;
+  margin-left: 20px;
+}
 
- .span{
-    color: #fff;
-    font-size: 0.8rem;
-    margin-left: 10px;
-  }
+.second__control {
+  display: flex;
+  align-items: center;
+}
 
-  .second__control {
-    display: flex;
-    align-items: center;
-  }
+/* 
+
+Use these three colors for the controls
+#146173
+#BFAE99
+#D97777
+
+*/
 
 .volumeSlider {
-    width: 100px;
-    color: #9556CC;
+  width: 5rem;
+  color: #D97777;
+}
+
+.seekSlider {
+  color: #D97777;
+}
+
+.icon__btn {
+  padding: 0 10px;
+  color: #D97777;
 }
